--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -170,6 +170,16 @@ android {
                         arguments "NDK_APP_SHORT_COMMANDS=true"
                     }
                 }
+                signingConfigs {
+        release {
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+                storeFile file(MYAPP_UPLOAD_STORE_FILE)
+                storePassword MYAPP_UPLOAD_STORE_PASSWORD
+                keyAlias MYAPP_UPLOAD_KEY_ALIAS
+                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+            }
+        }
+    }
             }
             if (!enableSeparateBuildPerCPUArchitecture) {
                 ndk {
